<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="300dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/default_ava"
        app:civ_border_color="@color/black"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/username"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/civ_avatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.128" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="250dp"
        android:layout_height="17dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/civ_avatar"
        app:layout_constraintTop_toBottomOf="@+id/tv_username" />

    <TextView
        android:id="@+id/tv_company"
        android:layout_width="250dp"
        android:layout_height="17dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/company"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/civ_avatar"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="250dp"
        android:layout_height="17dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/civ_avatar"
        app:layout_constraintTop_toBottomOf="@+id/tv_company" />

</androidx.constraintlayout.widget.ConstraintLayout>