<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".Activity.UserDetailActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_avatar_dt"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/default_ava"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.033" />

    <TextView
        android:id="@+id/tv_username_dt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/username"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/civ_avatar_dt"
        app:layout_constraintStart_toStartOf="@+id/civ_avatar_dt"
        app:layout_constraintTop_toBottomOf="@+id/civ_avatar_dt"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_name_dt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/civ_avatar_dt"
        app:layout_constraintStart_toStartOf="@+id/civ_avatar_dt"
        app:layout_constraintTop_toBottomOf="@+id/tv_username_dt"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_repository_dt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/repository"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/civ_avatar_dt"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="@+id/civ_avatar_dt"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_dt"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_company_dt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/company"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/civ_avatar_dt"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="@+id/civ_avatar_dt"
        app:layout_constraintTop_toBottomOf="@+id/tv_repository_dt"
        app:layout_constraintVertical_bias="0.003" />

    <TextView
        android:id="@+id/tv_location_dt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/civ_avatar_dt"
        app:layout_constraintStart_toStartOf="@+id/civ_avatar_dt"
        app:layout_constraintTop_toBottomOf="@+id/tv_company_dt"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:minHeight="?actionBarSize"
        app:layout_constraintBottom_toTopOf="@+id/view_pager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_location_dt"
        app:tabIndicatorFullWidth="false"
        app:tabIndicatorHeight="2dp"
        app:tabMode="fixed"
        app:tabRippleColor="@null" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_marginTop="375dp" />

    <ImageButton
        android:id="@+id/ibtn_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/civ_avatar_dt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/civ_avatar_dt"
        app:layout_constraintTop_toTopOf="@+id/civ_avatar_dt"
        android:src="@drawable/ic_baseline_favorite_border_24" />

</androidx.constraintlayout.widget.ConstraintLayout>